styles.css
:root{
--primary-blue:#095AA7;
--saving-green: #1C9800; 
--light-grey: #EEEEEE;
--hover-blue: #2383DE;
}

main {
    margin: 0px 200px;
}

nav {
background-color: var(--primary-blue);


}

header section {
    margin: 2em;
    display: flex;
    place-content: center;
    gap: 100px;
    & button {
        font-weight: bold;
        display: flex;
        background-color: white;
        border: 3px solid var(--light-grey);
        border-radius: 50%;
        width: 60px;
        height: 60px;
        line-height: 55px;
        font-size: 20px;
        place-content: center;
        /*Add the line things in between*/

        &:not(:first-child)::before {
            content: "";
            z-index: -1;
            width: 6em;
            border: 5px solid var(--light-grey);
            position: absolute;
            transform: translate(-4em, 1em);
        }

        &:hover {
            cursor: pointer;
        }

        &.active {
            background-color: var(--primary-blue);
            color: white;
            border: 3px solid var(--primary-blue);

            &::before {
                border-color: var(--primary-blue);
            }
        }
    }
}

h1, h2, h3 {
    font-weight: 100;
}

* {
    font-family: Arial, Helvetica, sans-serif;
    /* font used as placeholder for now */ 
}

#description{
    display: flex;
    flex-direction: column;
    gap: 0px;
}


#description p{
font-size: 30px;
margin-bottom: 10px;
}

#description p:last-child {
    margin-bottom: 50px;
}

#description p:nth-child(2) {
    font-size: 35px;
    text-decoration: underline;
    &::after {
        content: "⬇️";
    }
}

h1{
font-size: 50px;
margin-bottom: 10px;
}

#mainContent {
    display: grid;
    grid-template-columns: 400px auto;
    grid-template-rows: auto;
    gap: 40px;
}

/* Left side: Budget Calculation */
#showBudget{
    display: flex;
    flex-direction: column;
    align-items: center;
    color: white;
    background-color: var(--primary-blue);
    border-radius: 20px;
}

#NetIncome {
color: black;
background-color: white;
padding: 5px 30%;
border-radius: 10px;
border: 2px solid black;

}
#NetIncome p {
text-align: center;
font-size: 30px;
color: var(--saving-green);
font-weight: 700;
}

#NetIncome h3{ /* Wrapping occurs with NetIncome h3 */
line-height: 0%;
font-size: 20px;
}

.Calculations{
display: flex;
justify-content: space-between;
align-items: center;
}

.Calculations h3{
margin-right: 50px;
}

/* Right Side: Input Fields */
#input-fields .hidden {
    display: none;
}

.input-fields-info{
    
    background-color: var(--primary-blue);
    color: white;
    border-radius: 20px;
    padding: 5px;

    & > p {
        padding: 10px;
        font-size: 20px;
    }
}

.input-fields-info h3 {
    display: flex;
    align-items: center;
    &::before {
        content: url(eecu-images/eye.png);
        margin-right: 7px;
    }
    margin-left: 10px;
}
/* fix <p> or info to center */

.inputs {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto;
    gap: 25px;
    
}

.inputs * {
    padding: 20px;
    border-radius: 20px;;
}

#input-fields section h2 {
    font-size: 40px;
    line-height: 0px;
    
}

#input-fields > section {
    display: flex;
    flex-direction: column;
    gap: 20px;
}

#input-fields .Summary {
    display: none;
}

.Buttons {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.Buttons .hidden {
    display: none;
}

.NextBtn, .BackBtn {
    font-weight: bold;
    margin-top: 50px;
    cursor: pointer;
    text-wrap: nowrap;
    border-radius: 10px;
    padding: 10px 30px;
    font-size: 25px;
    border: 3px solid black;

    &:hover {
        background-color: var(--hover-blue);
    }
}

.NextBtn {
    background-color: var(--primary-blue);
    color: white;
    &:hover {
        background-color: var(--hover-blue);
    }
}

.BackBtn {
    background-color: white;
    color: var(--primary-blue);
    border-color: var(--primary-blue);
    &:hover {
        background-color: var(--light-grey);
    }
}


/* Make the placeholder font bigger */
.options option {
    font-size: 20px;

}

